# rikgpio

./: CMakeLists.txt  README.md  dbustest.cpp  gpiotimer.sh  gpioxxx.sh  rikgpio.service  rikgpio.timer  xyz.openbmc_project.rikgpio.service
include/: rikgpio.hpp
src/: mainapp.cpp  rikgpio.cpp
